syntax = "proto3";

package pb;

// 分页
message Paginate {
  uint32 total = 1;      // 总记录数
  uint32 page = 2;       // 页码
  uint32 page_size = 3;  // 每页条数
  uint32 total_page = 4; // 总页数
}

// 分页请求
message PaginateRequest {
  optional uint32 page = 1;      // 页码
  optional uint32 page_size = 2; // 每页条数
}