syntax = "proto3";

package pb;

import "user_message.proto";
import "aff_message.proto";
import "id_message.proto";
import "daterange_message.proto";
import "paginate_message.proto";
import "del_or_restore_message.proto";

// -- 是否存在

message UserExistsRequest {
  string email = 1;
  optional string nickname = 2;
  optional uint64 id = 3;
}
message UserExistsResponse { bool is_exists = 1; }

// -- 修改状态
message ChangeUserStatusRequest {
  uint64 id = 1;
  UserStatus status = 2;
}

// -- 修改密码
message ChangeUserPasswordRequest {
  uint64 id = 1;
  string password = 2;                  // 新密码
  optional string current_password = 3; // 当前密码
}

// -- 查找用户
message FindUserRequest {
  oneof by {
    uint64 id = 1;
    string email = 2;
  }
  optional UserStatus status = 3;
  optional bool is_del = 4;
}

message FindUserResponse { optional User user = 1; }

// -- 用户列表
message ListUserRequest {
  PaginateRequest paginate = 1;
  optional string email = 2;
  optional string nickname = 3;
  optional UserStatus status = 4;
  optional bool is_del = 5;
  optional DateRange date_range = 6;
}

message ListUserResponse {
  Paginate paginate = 1;
  repeated User users = 2;
}

service UserService {
  rpc CreateUser(User) returns (ID); // 创建用户
  rpc UserExists(UserExistsRequest)
      returns (UserExistsResponse); // 用户是否存在
  rpc EditUser(User) returns (Aff); // 修改用户
  rpc DeleteOrRestoreUser(DeleteOrRestoreRequest)
      returns (Aff); // 删除/恢复用户
  rpc ChangeUserStatus(ChangeUserStatusRequest) returns (Aff); // 修改用户状态
  rpc ChangeUserPassword(ChangeUserPasswordRequest)
      returns (Aff); // 修改用户密码
  rpc FindUser(FindUserRequest) returns (FindUserResponse);
  rpc ListUser(ListUserRequest) returns (ListUserResponse);
}